# job-apps-workflow-system

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  apply-engine-ai-orchestrated-plan.md  apply-engine-target-architecture-plan.md  build-spec.md  job-apply-agent-plan.md  macos-native-app-plan.md  pyproject.toml  requirements.md  secret-helper-keychain-design.md  security-review.md
macos/: README.md
macos/JobAppsNative/: Package.swift
migrations/: README.md
scripts/: bootstrap.sh  build-macos-app.sh  reset-secret-storage-test.sh  run-local.sh  run-packaged-secret-storage-test.sh  verify-secret-storage.sh
scripts/lib/: apple-signing.sh  local-config.sh
src/job_apps_system/: __init__.py  main.py
src/job_apps_system/agents/: contact_enrichment.py  interview_followup_sending.py  interview_followup_setup.py  job_apply.py  job_intake.py  job_scoring.py  outreach_generation.py  outreach_sending.py  resume_generation.py
src/job_apps_system/cli/: launch_backend.py  launch_linkedin_browser.py  run_once.py  scheduler_tick.py  sync_google.py
src/job_apps_system/config/: models.py  resource_ids.py  secrets.py  settings.py
src/job_apps_system/db/: session.py
src/job_apps_system/integrations/: company_pages.py
tests/unit/: test_anymailfinder_client.py  test_apply_agent.py  test_company_pages.py  test_interview_contacts.py  test_job_scoring.py  test_linkedin_scraper_company_identity.py  test_manual_runs.py  test_resume_generation.py  test_runtime_paths.py  test_scheduler.py  test_secret_backend.py  test_setup_config.py
(+117 files in other folders)
