[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-apps-workflow-system"
version = "0.1.0"
description = "Local-first job application workflow orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "markdown",
  "sqlalchemy",
  "alembic",
  "pydantic>=2",
  "pydantic-settings",
  "keyring",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "playwright",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
